touch index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Group Site</title>
+</head>
+<body>
+    <header>
+        <h1>Fun Project Site</h1>
+    </header>
+    <section id = 'facts'>
+        <h2>Facts</h2>
+    </section>
+    <section id = 'media'>
+        <h2>Media</h2>
+    </section>
+    <section id = 'outside-links'>
+        <h2>Outside Links</h2>
+    </section>
+    <section>
+        <h2>About Us</h2>
+        <p>Our team is made up of Jacob, Adriann, Quynh, Keith, and Eden. We rock!</p>
+    </section>
+</body>
+</html>
