--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     </header>
     <section id = 'facts'>
         <h2>Facts</h2>
+        <ul>
+            <li>Dogs have 18 muscles controlling their ears</li>
+            <li>Dogs are about as intelligent as a two-year-old</li>
+            <li>Their sense of smell is at least 40x better than ours</li>
+            <li>A dog’s nose is the equivalent of a human fingerprint.</li>
+            <li>Dogs only have sweat glands in their paws</li>
+            </ul>
+            
     </section>
     <section id = 'media'>
         <h2>Media</h2>
@@ -22,6 +30,7 @@
     <section>
         <h2>About Us</h2>
         <p>Our team is made up of Jacob, Adriann, Quynh, Keith, and Eden. We rock!</p>
+        <p>Adriann Seymour - Mom of 2. Future FullStack Developer</p>
     </section>
 </body>
 </html>
