added video and pictures

--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
     </section>
     <section id = 'media'>
         <h2>Media</h2>
+        <video src="https://media.istockphoto.com/videos/at-home-happy-couple-play-with-their-dog-gorgeous-brown-labrador-video-id1314788746" controls width="400">Sorry, your browser doesn't support
+            embed videos.
+          </video>
+
+          <table>
+            <tr>
+              <th><img src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg?auto=compress&cs=tinysrgb&w=600" width="300" alt="dogs"></th>
+              <th><img src="https://images.pexels.com/photos/406014/pexels-photo-406014.jpeg?auto=compress&cs=tinysrgb&w=600" width="300" alt="dog peaking"></th>
+            </tr>
+            <tr>
+              <th><img src="https://images.pexels.com/photos/1633522/pexels-photo-1633522.jpeg?auto=compress&cs=tinysrgb&w=600" width="300" alt="dog with stick"></th>
+              <th><img src="https://images.pexels.com/photos/39317/chihuahua-dog-puppy-cute-39317.jpeg?auto=compress&cs=tinysrgb&w=600" width="300" alt="dog in cup"></th>
+            </tr>
+           </table>
+
     </section>
     <section id = 'outside-links'>
         <h2>Outside Links</h2>
@@ -31,6 +46,7 @@
         <h2>About Us</h2>
         <p>Our team is made up of Jacob, Adriann, Quynh, Keith, and Eden. We rock!</p>
         <p>Adriann Seymour - Mom of 2. Future FullStack Developer</p>
+        <p>Keith Thomas, trying to figure out what to do.</p>
     </section>
 </body>
 </html>
