add outside links

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <header>
         <h1>Fun Project Site</h1>
     </header>
+    <a href="#facts">Facts</a>
+    <a href="#media">Media</a>
+    <a href="#outside-links">Outside Links</a>
+    <a href="#about-us">About Us</a>
     <section id = 'facts'>
         <h2>Facts</h2>
         <ul>
@@ -41,12 +45,18 @@
     </section>
     <section id = 'outside-links'>
         <h2>Outside Links</h2>
+        <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwio9672gcL4AhUqK0QIHZG0AqcQFnoFCJcBEAE&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FDog&usg=AOvVaw1PjfmjCx6eEw08__6ZPTnC">Dog</a>
+        <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwio9672gcL4AhUqK0QIHZG0AqcQFnoECH4QAQ&url=https%3A%2F%2Fwww.cdc.gov%2Fhealthypets%2Fpets%2Fdogs.html&usg=AOvVaw1mhRJ4i7SghUBtzDWbhlys">Healthy Pets</a>
+        <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwio9672gcL4AhUqK0QIHZG0AqcQFnoFCKMBEAE&url=https%3A%2F%2Fa-z-animals.com%2Fpets%2Fdogs%2F&usg=AOvVaw0hN7oDZZj6XxZQGCfSNgOP">Types of Dogs</a>
+
     </section>
-    <section>
+    <section id="about-us">
         <h2>About Us</h2>
         <p>Our team is made up of Jacob, Adriann, Quynh, Keith, and Eden. We rock!</p>
         <p>Adriann Seymour - Mom of 2. Future FullStack Developer</p>
         <p>Keith Thomas, trying to figure out what to do.</p>
+        <p>Quynh Nguyen, I love dogssss</p>
+        <p>Jacob Beers, Once bitten by a dog</p>
     </section>
 </body>
 </html>
