--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <p>Keith Thomas, trying to figure out what to do.</p>
         <p>Quynh Nguyen, I love dogssss</p>
         <p>Jacob Beers, Once bitten by a dog</p>
+        <p>Eden love team work and love dogs as well</p>
     </section>
 </body>
 </html>
